# UplinkIRC

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  SECURITY.md  config.toml.example  index.html
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: commands.md  configuration.md  faq.md  howto.html  index.html  ircv3.md  keyboard-shortcuts.md  quality.html
packaging/: NodeRelay.desktop  Uplink.desktop  build-appimage.sh
packaging/freebsd/: Makefile  pkg-descr  pkg-plist
packaging/kde/: README.md
packaging/kde/kwin/uplink-dropdown/: metadata.json
packaging/kde/kwin/uplink-dropdown/contents/code/: main.js
packaging/kde/scripts/: force-clean-uplink-kde-dropdown.sh  install-uplink-kde-dropdown.sh  uninstall-uplink-kde-dropdown.sh
resources/: resources.qrc
scripts/: generate_emojidata.py  release.sh  sync-site.sh
site/: index.html
src/: main.cpp  version.h.in
src/config/: config.cpp  config.h  keychainhelper.cpp  keychainhelper.h
src/irc/: dccreceive.cpp  dccreceive.h  dccsend.cpp  dccsend.h  ircclient.cpp  ircclient.h  ircparser.cpp  ircparser.h  stsstore.cpp  stsstore.h
src/model/: channel.h  ids.h  message.h  serversession.h  sessionmodel.cpp  sessionmodel.h
src/net/: addresscheck.h
src/search/: common.cpp  completion.cpp  display.cpp  displayhighlight.cpp  internal.h  mentions.cpp  queryeval.cpp  queryoptions.cpp  queryparser.cpp  richsearch.cpp  richsearch.h  tokenizer.cpp
src/ui/: aboutdialog.cpp  appicons.h  channellistdialog.cpp  channellistdialog.h  channelpane.cpp  channelpane.h  chatline.h  chatrenderer.cpp  chatrenderer.h  chatview.cpp  chatview.h  commanddispatcher.cpp  commanddispatcher.h  docsdialog.cpp  dropdownsettingsdialog.cpp  dropdownsettingsdialog.h  emojidata.h  emojipicker.cpp  fadescrollbar.cpp  fadescrollbar.h  fontdialog.cpp  fontdialog.h  linkpreview.cpp  linkpreview.h  mainwindow.cpp  mainwindow.h  manageserversdialog.cpp  manageserversdialog.h  menuicons.h  pillbutton.h  preferencesdialog.cpp  preferencesdialog.h  quickswitcher.cpp  quickswitcher.h  serverdialog.cpp  serverdialog.h  signalbars.cpp  signalbars.h  solidcombobox.h  themeloader.cpp  (+3 more)
tests/: CMakeLists.txt  fuzz_ircparser.cpp  tst_chatformat.cpp  tst_config.cpp  tst_ircparser.cpp  tst_richmentions.cpp  tst_richsearch.cpp
tests/corpus/: 001_basic_privmsg  002_numeric_001  003_ping_no_prefix  004_ircv3_tags  005_tag_escapes  006_extended_join  007_mode_multiparams  008_tags_no_prefix  009_tags_only_no_command  012_topic  013_quit  014_client_tags  015_batch_open  016_batch_close  017_names_server_time  018_nick_change  019_kick  022_empty_trailing  023_empty_tag_key  024_utf8_emoji  025_tagmsg_no_tags  026_typing_tagmsg
themes/: 3024-base16.toml  Booberry.toml  BreezeDarkPlus.toml  Catppuccin-Latte.toml  Catppuccin-Macchiato.toml  Catppuccin-Mocha.toml  Cyber-Red.toml  Cyberpunk.toml  Dark-Green.toml  Discord-80-Saturation.toml  Discord.toml  Dracula.toml  Ferra-Light.toml  Flexor-Dark.toml  Gruvbox.toml  Halcyon-Dark.toml  IntelliJ-Light.toml  Kanagawa.toml  Macaw-Dark.toml  Macaw-Light.toml  Matrix.toml  Noctis-Lilac.toml  Nord.toml  Nostromo-Terminal.toml  One-Dark.toml  Oxocarbon.toml  Rose-Pine-Dawn.toml  Rose-Pine-Moon.toml  Rose-Pine.toml  Solarized-Dark.toml  Sonokai.toml  Tokyo-Night-Storm.toml  VESPER.toml  Zenburn.toml  acton.toml  apathy-base16.toml  apprentice-base16.toml  ashes-base16.toml  atelier-cave-base16.toml  atelier-cave-light-base16.toml  (+266 more)
